--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ xcuserdata
 ## Obj-C/Swift specific
 *.hmap
 *.ipa
+*.dSYM.zip
+*.dSYM
 
 # CocoaPods
 #
@@ -33,7 +35,10 @@ xcuserdata
 # you should judge for yourself, the pros and cons are mentioned at:
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
-# Pods/
+Pods/
+Podfile
+Podfile.lock
+
 
 # Carthage
 #
